# RealGigaChat-Backend

./: .gitignore  Cargo.toml  Dockerfile
src/: error.rs  main.rs  models.rs
src/handlers/: auth.rs  chat.rs  friends.rs  mod.rs  profile.rs
