[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supabase_rs = { version = "0.4.14", features = ["rustls"] }
argon2 = "0.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
thiserror = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
